sql/sql_acl.cc
@@ -5462,7 +5462,7 @@ table_hash_search(const char *host, const char *ip, const char *db,
 		  const char *user, const char *tname, bool exact)
 {
   return (GRANT_TABLE*) name_hash_search(&column_priv_hash, host, ip, db,
-					 user, tname, exact, FALSE);
+					 user, tname, exact, (lower_case_table_names > 0));
 }
 
 static bool column_priv_insert(GRANT_TABLE *grant)
